--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -605,7 +605,7 @@ button[disabled] {
     cursor: not-allowed;
 }
 
-button.on_time {
+button.on-time {
     background-color: #28a745;
     color: white;
 }
@@ -623,19 +623,4 @@ button.upcoming {
 .subject.attended-on-time {
     background-color: green;
     color: white;
-}
-
-.subject.missed-subject {
-    background-color: #d9534f; /* red */
-    color: white;
-    font-weight: bold;
-    cursor: not-allowed;
-    opacity: 0.8;
-}
-
-.subject.inactive {
-    background-color: #d9534f; /* red */
-    color: white;
-    opacity: 0.7;
-    cursor: not-allowed;
 }
