--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -14,25 +14,6 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
-.password-container {
-    position: relative;
-    width: 100%;
-}
-
-.password-container input {
-    padding-right: 40px; /* Adjust space to make room for the icon */
-    width: 100%;
-}
-
-.password-container i {
-    position: absolute;
-    right: 10px;
-    top: 50%;
-    transform: translateY(-50%);
-    cursor: pointer;
-    font-size: 1.2rem; /* Adjust the size of the icon */
-}
-
 .container {
     width: 95%;
     max-width: 1600px;
@@ -250,7 +231,7 @@ body {
 
 .subject {
     padding: 15px 25px;
-    background: #f0ad4e;
+    background: #d056ef;
     color: white;
     border-radius: 5px;
     text-align: center;
@@ -605,7 +586,7 @@ button[disabled] {
     cursor: not-allowed;
 }
 
-button.on_time {
+button.on-time {
     background-color: #28a745;
     color: white;
 }
@@ -623,26 +604,4 @@ button.upcoming {
 .subject.attended-on-time {
     background-color: green;
     color: white;
-}
-
-.subject.missed-subject {
-    background-color: #d9534f; /* red */
-    color: white;
-    font-weight: bold;
-    cursor: not-allowed;
-    opacity: 0.8;
-}
-
-.subject.inactive {
-    background-color: #d9534f; /* red */
-    color: white;
-    opacity: 0.7;
-    cursor: not-allowed;
-}
-
-.subject-schedule {
-    font-size: 0.8em;
-    opacity: 0.9;
-    display: block;
-    margin-top: 5px;
 }
