--- a/templates/login.html
+++ b/templates/login.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login |</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}">
-    <!-- Include FontAwesome -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
 
@@ -25,8 +23,7 @@
             <label for="password">Password</label>
             <div class="password-wrapper">
                 <input type="password" id="password" name="password" placeholder="Enter your password" required />
-                <!-- FontAwesome icons for password visibility toggle -->
-                <span class="toggle-password" onclick="togglePassword()"><i class="fas fa-eye"></i></span>
+                <span class="toggle-password" onclick="togglePassword()">👁️</span>
             </div>
 
             <div class="g-recaptcha" data-sitekey="{{ config['RECAPTCHA_SITE_KEY'] }}"></div>
@@ -42,16 +39,14 @@
     <script>
         function togglePassword() {
             const passwordInput = document.getElementById("password");
-            const toggleBtn = document.querySelector(".toggle-password i");
+            const toggleBtn = document.querySelector(".toggle-password");
 
             if (passwordInput.type === "password") {
                 passwordInput.type = "text";
-                toggleBtn.classList.remove("fa-eye");
-                toggleBtn.classList.add("fa-eye-slash");  // Change icon to eye-slash
+                toggleBtn.textContent = "🔒";
             } else {
                 passwordInput.type = "password";
-                toggleBtn.classList.remove("fa-eye-slash");
-                toggleBtn.classList.add("fa-eye");  // Change icon back to eye
+                toggleBtn.textContent = "👁️";
             }
         }
     </script>
